	* Kerning PQ map config initialization is done before party is warped in.

2012-09-30  GoldenKevin  (revision 147)

	* Support for the newest Kvj format.
	* Fixed events/ship_ossyria.js not clearing Balrogs before the start of its
	next run.
	* Growlie now warps party out in the same conversation that it clears the
	stage. The leader does not have to click him again after clearing.
	* Fixed Henesys PQ event script not destroying itself when exiting from Pig
	Town.
	* Fixed Moon Bunny spawning in the wrong direction in Henesys PQ.
	* Henesys PQ scripts are functionally complete - implemented rice cake drops
	and Moon Bunny getting hurt.
	* Ariant Coliseum bomb mob actually explodes. All mobs that self destruct on
	a timer rather than at a certain HP are now supported.

2012-09-30  GoldenKevin  (revision 148)

	* Fixed quest mob progress going over the requirement if the player attacked
	more than one of the required mobs and then killed some of them after
	completing the requirement.
	* Fixed random item rewards for quests.
	* Fixed job check for quest item rewards.

2012-10-21  GoldenKevin  (revision 149)

	* All beginner skills (except Monster Rider and Follow the Lead) are
	functional, although Recovery does not display the HP recovered in big blue
	numbers above the player's head.
	* Got rid of custom time zone in TimeTool only. The value specified in the
	properties files now apply for the entire Java process, so the logger dates
	and times, the Rhino/JavaScript Date objects, MySQL Connector/J setDate
	functions, and everything that used TimeTool before use a consistent
	time zone. Note that any messages logged before the properties files are
	successfully read will use the server's time zone.
	* CenterServer allows custom time zone for message logging and MySQL
	Connector/J purposes.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.